refactor: Gemini 클라이언트 및 서비스 개선 (#288)