@@ -2,15 +2,14 @@ package com.umc.linkyou.infra.gemini.service;
 
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.umc.linkyou.infra.ai.AiSearchService;
-import com.umc.linkyou.infra.ai.dto.ExternalLinkDTO;
+import com.umc.linkyou.infra.ai.dto.ExternalLinkResultDTO;
+import com.umc.linkyou.infra.ai.dto.ExternalSearchRequest;
 import com.umc.linkyou.infra.gemini.prompt.common.PromptComposer;
 import com.umc.linkyou.infra.gemini.prompt.curation.ExternalSearchPrompt;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -20,27 +19,18 @@ public class GeminiExternalSearchService implements AiSearchService {
     private final PromptComposer promptComposer;
 
     @Override
-    public List<ExternalLinkDTO> searchExternalLinks(
-            List<String> tagNames,
-            int limit,
-            String jobName,
-            String gender
-    ) {
-        ExternalSearchPrompt prompt = new ExternalSearchPrompt(tagNames, limit, jobName, gender);
-
-        List<Map<String, String>> rawList = geminiService.callAndParseList(
+    public List<ExternalLinkResultDTO> searchExternalLinks(ExternalSearchRequest request) {
+        List<ExternalLinkResultDTO> rawList = geminiService.callAndParseWithSearch(
                 promptComposer.externalSearch(),
-                prompt.render(),
-                new TypeReference<List<Map<String, String>>>() {}
+                new ExternalSearchPrompt(request).render(),
+                new TypeReference<List<ExternalLinkResultDTO>>() {}
         );
 
         return rawList.stream()
-                .filter(m -> m.get("url") != null && !m.get("url").isBlank())
-                .limit(limit)
-                .map(m -> ExternalLinkDTO.builder()
-                        .title(m.getOrDefault("title", "No Title"))
-                        .url(m.get("url"))
-                        .build())
-                .collect(Collectors.toList());
+                .filter(l -> l.getUrl() != null && !l.getUrl().isBlank())
+                .map(l -> l.getTitle() != null ? l
+                        : ExternalLinkResultDTO.builder().title("No Title").url(l.getUrl()).build())
+                .limit(request.limit())
+                .toList();
     }
 }
